k8s/ingress/alb-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-app-ingress
  namespace: todo-app
  annotations:
    kubernetes.io/ingress.class: alb

    # Internet-facing ALB
    alb.ingress.kubernetes.io/scheme: internet-facing

    # Target Pods directly
    alb.ingress.kubernetes.io/target-type: ip

    # Listen on HTTP
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'

    # Health check
    alb.ingress.kubernetes.io/healthcheck-path: /

spec:
  ingressClassName: alb

  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: flask-service
                port:
                  number: 8000
